# jobsearch-mcp

./: .gitignore  .golangci.yml  .goreleaser.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SKILL.md  go.mod  go.sum
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
classifier/: pyproject.toml
classifier/src/classifier/: __init__.py  main.py  prompts.py
classifier/src/classifier/llm/: __init__.py  base.py  ollama.py  openai.py
classifier/tests/: __init__.py  conftest.py  test_api.py  test_llm.py  test_prompts.py
cmd/jobsearch/: main.go
docs/adr/: 001-hybrid-go-python-architecture.md  002-sqlite-local-storage.md  003-multi-layer-email-filtering.md  004-local-first-llm.md  005-mcp-integration.md  006-parallel-processing-and-progress.md  007-classification-validation-pipeline.md
docs/future/: README.md  calendar-integration.md  http-transport.md  imap-provider.md  integrations.md  notion-export.md  outlook-provider.md  tui-interface.md  webhooks.md
internal/classifier/: client.go
internal/cli/: archive.go  config.go  export.go  feedback.go  filters.go  list.go  markspam.go  mcp.go  merge.go  root.go  search.go  show.go  stats.go  sync.go  terminal.go  thread.go
internal/config/: config.go  config_test.go  loader.go
internal/database/: db.go  db_test.go  models.go  queries.go
internal/email/: provider.go  (+1 more)
scripts/: build.sh  jobsearch-wrapper.sh  post-merge-hook.sh  setup.sh
workflows/: README.md  daily-digest.json  stale-alert.json  weekly-report.json
(+25 files in other folders)
